[FIX] web_editor: make 'Save' tooltip visible
X-original-commit: 24bd2e805e730b6b8d62c4698686588183d4cdaf

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -32,7 +32,7 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
 #web_editor-top-edit {
     @include o-position-absolute(0, 0, auto, 0);
     position: fixed;
-    z-index: $o-we-zindex;
+    z-index: $o-we-zindex + 1;
     height: var(--o-we-toolbar-height);
     background-color: $o-we-bg;
 
